@@ -17,6 +17,9 @@ Library
   for patterns that starts with capturing groups.  Fast searching optimization
   now can't be disabled at compile time.
 
+- Issue #23661: unittest.mock side_effects can now be exceptions again. This
+  was a regression vs Python 3.4. Patch from Ignacio Rossi
+
 
 What's New in Python 3.5.0 beta 4?
 ==================================
